# ipydatetime

./: .bumpversion.cfg  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  appveyor.yml  codecov.yml  ipydatetime.json  pytest.ini  setup.cfg  setup.py
.github/workflows/: docs.yml  js.yml  python.yml
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
examples/: introduction.ipynb
ipydatetime/: __init__.py  _frontend.py  _version.py  base_widget.py  datetime_widget.py  example.py  time.py  time_widget.py  trait_types.py
ipydatetime/nbextension/: __init__.py
ipydatetime/nbextension/static/: extension.js
ipydatetime/tests/: conftest.py  test_datetime.py  test_example.py  test_naive.py  test_nbextension_path.py  test_serializers.py  test_time.py
ts/: .npmignore  package.json  webpack.config.js
ts/src/: datetime.ts  extension.ts  index.ts  naive.ts  plugin.ts  time.ts  version.ts  widget.ts
ts/tests/: karma.conf.js
ts/tests/src/: datetime.spec.ts  index.spec.ts  time.spec.ts  utils.spec.ts
