[bdist_wheel]
universal=1

[metadata]
description-file = README.md
license_file = LICENSE.txt

[manifix]
known-excludes =
    .git*
    .git/**/*
    .coveragerc
    .travis.yml
    .vscode/**/*
    appveyor.yml
    codecov.yml
    readthedocs.yml
    lerna-debug.log
    **/node_modules/**/*
    **/__py_cache__/**/*
    **/*.pyc
    ts/coverage/**/*
    ts/lib/**/*
    ts/test/build/**/*
    ts/package-lock.json
    ts/yarn.lock
    *.egg-info
